# pychat-llm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/pychat_llm/: app.py  cli.py  domain.py  history.py  llm.py  persistence.py  persistence_fs.py  repository.py  service.py
src/pychat_llm/providers/: __init__.py  mock.py
tests/: conftest.py  test_app.py
