[project]
name = "pychat-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "nikita.shmakov",email = "nikita.shmakov@tourmachine.ru"}
]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "textual (>=8.2.4,<9.0.0)"
]

[tool.poetry]
packages = [{include = "pychat_llm", from = "src"}]

[project.scripts]
pychat-llm = "pychat_llm.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
