[project]
name = "pychat-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Shmakov",email = "nikshmakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "textual (>=8.2.4,<9.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poetry]
packages = [{include = "pychat_llm", from = "src"}]

[project.scripts]
pychat-llm = "pychat_llm.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
